--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor/core": "2.4.7",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "firebase": "^8.3.2",
     "vue": "^3.0.0-0",
@@ -31,6 +32,7 @@
     "@vue/test-utils": "^2.0.0-0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "ionicons": "^5.4.0",
     "vue-jest": "^5.0.0-0"
   },
   "description": "An Ionic project"
